<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3F51B5"


    >

    <ImageView android:id="@+id/splashscreen" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_app_48x48"
        android:layout_gravity="center"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/the_application_sends"
        android:textColor="#ffffff"
        android:textStyle="italic"
        android:textSize="13sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <TextView
        android:text="@string/instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textColor="#ffffff"
        android:textStyle="italic"
        android:textSize="16sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <!--TextView
        android:text="@string/make_sure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView22"
        android:textColor="#ffffff"
        android:textStyle="italic"
        android:textSize="14sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" /-->

    <TextView
        android:text="@string/instruction_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView4" android:textColor="#ffffff"
        android:textStyle="italic"
        android:textSize="13sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <TextView
        android:text="@string/instruction_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView5" android:textColor="#ffffff"
        android:textStyle="italic"
        android:textSize="13sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <TextView
        android:text="@string/instruction_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textColor="#ffffff"
        android:textStyle="italic"
        android:textSize="13sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />

    <TextView
        android:text="@string/instruction_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView6" android:textColor="#ffffff"
        android:textStyle="italic"
        android:textSize="13sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <TextView
        android:text="@string/instruction_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView7" android:textColor="#ffffff"
        android:textStyle="italic"
        android:textSize="13sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <Button
        android:text="@string/splash_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_ok_splash"
        android:layout_gravity="center_horizontal"
        android:background="#FF7040" />

</LinearLayout>