<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.leon.text.findandtext.LandingScreen"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#607D8B">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:id="@+id/linearLayout1"
        android:layout_height="60dp">

        <Button
            android:text="@string/select_recipient_btn"
            android:layout_height="wrap_content"
            android:id="@+id/btn_select_recipient"
            android:background="@drawable/round_select"
            android:layout_width="match_parent"
            android:layout_gravity="center_vertical"
            android:textSize="16sp" />

    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout3"

        android:layout_weight="1"
        android:gravity="right"
        android:layout_below="@+id/linearLayout1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="36dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="0.04"
            android:gravity="right"
            android:id="@+id/textView_bat_level"
            android:layout_gravity="right"
            android:textColor="#90CAF9" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_alignTop="@+id/linearLayout3"
            android:layout_marginTop="32dp">

            <TextView
                android:text="@string/select_critical_battery_level_tv"
                android:layout_width="132dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:textSize="16sp"
                android:textColor="@android:color/background_dark" />

            <SeekBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/seekBar"
                android:max="100"
                android:layout_weight="1"
                android:layout_gravity="center_vertical" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout4"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_below="@+id/linearLayout3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="58dp">

    </LinearLayout>

    <TextView
        android:id="@+id/textView_selected_recipient"
        android:gravity="left|center"
        android:textSize="16sp"
        android:textColor="@android:color/background_dark"
        android:layout_below="@+id/linearLayout1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="24dp"
        android:layout_width="200dp"
        android:layout_height="50dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/stat"
            android:layout_marginBottom="32dp"
            android:layout_above="@+id/adView"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:gravity="right"
            android:layout_gravity="right"
            android:layout_marginRight="8dp" />

        <com.google.android.gms.ads.AdView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/adView"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id"

            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_weight="1"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Switch
            android:id="@+id/custom_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textOff="Off"
            android:textOn="On"
            android:text="@string/make_custom_message"
            android:textSize="16sp"
            />

    </LinearLayout>

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBarRound"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

    <Switch
        android:id="@+id/on_off_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textOff="Off"
        android:textOn="Go"
        android:text="@string/turn_service_on_off"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/progressBarRound"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>